z-index header-fixed

--- a/src/scss/components/header-fixed.scss
+++ b/src/scss/components/header-fixed.scss
@@ -1,7 +1,7 @@
 @import '../global/variables.scss';
 
 .header-fixed {
-  z-index: 1;
+  z-index: 10;
   position: fixed;
   display: none;
   align-items: center;
